--- a/frontend/src/Pages/Signup/SignUp.css
+++ b/frontend/src/Pages/Signup/SignUp.css
@@ -4,7 +4,9 @@
 
 body {
   font-family: 'Nunito', sans-serif;
+  overflow: hidden;
 }
+
 
 
 .input-style {
@@ -60,6 +62,7 @@ body {
     .main-container {
       flex-direction: column;
     }
+
   
     .login-form {
       margin-right: 0;
