--- a/frontend/src/Pages/LoginIn/Login.css
+++ b/frontend/src/Pages/LoginIn/Login.css
@@ -4,7 +4,8 @@
 
 body {
   font-family: 'Nunito', sans-serif;
-  overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: scroll;
 }
 
 
@@ -44,19 +45,19 @@ body {
 
 .btn-white:hover {
     background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255); /* Set the text color to white on hover */
+    color: rgb(255, 255, 255); 
 }
 
-/* Add responsive styles here */
-@media screen and (max-width: 767px) {
+
+/* @media screen and (max-width: 767px) {
     .header {
       text-align: center;
-      margin-bottom: 10px; /* Adjust the value as needed */
+      margin-bottom: 10px; 
     }
   
     .logo {
       margin-right: 0;
-      margin-bottom: 10px; /* Adjust the value as needed */
+      margin-bottom: 10px; 
     }
   
     .main-container {
@@ -65,7 +66,7 @@ body {
   
     .login-form {
       margin-right: 0;
-      margin-bottom: 10px; /* Adjust the value as needed */
+      margin-bottom: 10px;
     }
-  }
+  } */
   
