--- a/frontend/src/Pages/Signup/SignUp.css
+++ b/frontend/src/Pages/Signup/SignUp.css
@@ -4,7 +4,17 @@
 
 body {
   font-family: 'Nunito', sans-serif;
-  overflow: hidden;
+}
+.otp-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000; 
+  background: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  overflow-y: auto; 
 }
 
 
@@ -49,23 +59,29 @@ body {
 }
 
 @media screen and (max-width: 767px) {
-    .header {
-      text-align: center;
-      margin-bottom: 10px; /* Adjust the value as needed */
-    }
-  
-    .logo {
-      margin-right: 0;
-      margin-bottom: 10px; /* Adjust the value as needed */
-    }
-  
-    .main-container {
-      flex-direction: column;
-    }
-
-  
-    .login-form {
-      margin-right: 0;
-      margin-bottom: 10px; /* Adjust the value as needed */
-    }
+  .header {
+    text-align: center;
+    margin-bottom: 10px;
   }
+
+  .logo {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+  .main-container {
+    flex-direction: column;
+    align-items: center; /* Center the items in the main container */
+  }
+
+  .login-form {
+    margin-right: 0;
+    margin-bottom: 10px; 
+  }
+
+  .otp-modal {
+    width: 80%; 
+    max-width: 300px; 
+    margin: auto; 
+  }
+}
