resend otp completed and now doing ui works

--- a/frontend/src/userSide/Home/Home.css
+++ b/frontend/src/userSide/Home/Home.css
@@ -2,3 +2,8 @@ body {
     font-family: 'Nunito', sans-serif;
     overflow: hidden;
   }
+.fullbg{
+  background-color: black;
+  color: white;
+  height: 100vh;
+}
