--- a/frontend/src/userSide/Signup/SignUp.css
+++ b/frontend/src/userSide/Signup/SignUp.css
@@ -4,9 +4,19 @@
 
 body {
   font-family: 'Nunito', sans-serif;
-  overflow-y: scroll;
-  overflow-x: scroll;
 }
+.otp-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000; 
+  background: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  overflow-y: auto; 
+}
+
 
 
 .input-style {
@@ -45,28 +55,33 @@ body {
 
 .btn-white:hover {
     background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255); 
+    color: rgb(255, 255, 255);
 }
 
+@media screen and (max-width: 767px) {
+  .header {
+    text-align: center;
+    margin-bottom: 10px;
+  }
 
-/* @media screen and (max-width: 767px) {
-    .header {
-      text-align: center;
-      margin-bottom: 10px; 
-    }
-  
-    .logo {
-      margin-right: 0;
-      margin-bottom: 10px; 
-    }
-  
-    .main-container {
-      flex-direction: column;
-    }
-  
-    .login-form {
-      margin-right: 0;
-      margin-bottom: 10px;
-    }
-  } */
-  
+  .logo {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+  .main-container {
+    flex-direction: column;
+    align-items: center; 
+  }
+
+  .login-form {
+    margin-right: 0;
+    margin-bottom: 10px; 
+  }
+
+  .otp-modal {
+    width: 80%; 
+    max-width: 300px; 
+    margin: auto; 
+  }
+}
