--- a/frontend/src/userSide/Profile/UserProfile.css
+++ b/frontend/src/userSide/Profile/UserProfile.css
@@ -17,3 +17,13 @@ body {
   .rounded-profile {
     border-radius: px;
   }
+  .btn-black {
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+
+}
+
