--- a/frontend/src/adminSide/Usermanagement/UserManagement.css
+++ b/frontend/src/adminSide/Usermanagement/UserManagement.css
@@ -7,8 +7,13 @@
     background-color: rgb(0, 0, 0);
     color: white;
     padding: 10px 20px;
+    width: 100px;
+    height: 40px; 
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
+
+
+
