--- a/frontend/src/userSide/Profile/UserProfile.css
+++ b/frontend/src/userSide/Profile/UserProfile.css
@@ -1,11 +1,16 @@
 body {
     font-family: 'Nunito', sans-serif;
- 
+   background-color: black;
+      margin: 0;
+      padding: 0;
+  
+
+    
   }
-.fullbg{
+.fullbg-profile{
   background-color: black;
   color: white;
-  height: 100vh;
+  height: auto;
 }
 .profile-container {
     
