--- a/frontend/src/userSide/CreatePost/Createpost.css
+++ b/frontend/src/userSide/CreatePost/Createpost.css
@@ -1,9 +1,9 @@
 body {
     font-family: 'Nunito', sans-serif;
-    background-color: black;
+    /* background-color: black; */
   }
 .fullbg{
-    background-color: black;
+    /* background-color: black; */
     color: white;
     height: 100vh;
   }
