--- a/frontend/src/userSide/Profile/UserProfile.css
+++ b/frontend/src/userSide/Profile/UserProfile.css
@@ -32,3 +32,10 @@ body {
 
 }
 
+
+.boxer{
+  border-radius: 0px;
+  background: linear-gradient(315deg, #121212, #151515);
+  box-shadow:  -5px -5px 10px #141414,
+               5px 5px 10px #141414;
+}
