filter completed but design not completed

--- a/frontend/src/userSide/SerachUserProfile/SerachUserProfile.css
+++ b/frontend/src/userSide/SerachUserProfile/SerachUserProfile.css
@@ -31,4 +31,9 @@ body {
     cursor: pointer;
 
 }
+.emoji-button:hover {
+  transform: scale(1.2); /* Example: Scale the emoji on hover */
+  transition: transform 0.3s ease; /* Example: Add a smooth transition effect */
+}
+
 
