--- a/frontend/src/adminSide/Usermanagement/UserManagement.css
+++ b/frontend/src/adminSide/Usermanagement/UserManagement.css
@@ -3,16 +3,38 @@
     color: white;
     height: 100vh;
   }
+  .btn-container {
+    display: none;
+    transition: all 0.3s ease; /* Add transition for smooth animation */
+  }
+  
+  .btn-container.show {
+    display: block;
+  }
+  
   .btn-black {
-    background-color: rgb(0, 0, 0);
-    color: white;
-    padding: 10px 20px;
-    width: 100px;
-    height: 40px; 
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    transition: all 0.3s ease; /* Add transition for smooth animation */
+  }
+  
+  .btn-black.open {
+    transform: translateX(-20px); /* Adjust the value for desired animation */
+  }
+  // UserManagement.css
+.table-row {
+  transition: background-color 0.3s ease; /* Adjust transition duration as needed */
+}
+
+.table-row:hover {
+  background-color: #4a5568; /* Adjust hover background color as needed */
+}
+
+.button-container {
+  transition: opacity 0.3s ease; /* Adjust transition duration as needed */
+  opacity: 0;
+}
+
+.table-row:hover .button-container {
+  opacity: 1;
 }
 
 
